Changelog v5.2.4 (2025-04-17):
- Added hd-1 for testing

Changelog v5.2.3 (2025-04-16):
- Fixed Bugs with Best Match

Changelog v5.2.2 (2025-04-16):
- Fixed Bugs with last played source
- Fixed Bugs with UnCached Sources
- Modified Setup Wizard

Changelog v5.2.1 (2025-04-15):
- Small String bug

Changelog v5.2.0 (2025-04-15):
- Added a Setup Wizard Script
- Prepared the Migration Script
- Added Settings Script to AD and RD

Changelog v5.1.100 (2025-04-13):
- Added Playing Next default action setting

Changelog v5.1.99 (2025-04-12):
- Forgot to delete dumb print statement

Changelog v5.1.98 (2025-04-12):
- Added Fuzzy Match Sensitivity option

Changelog v5.1.97 (2025-04-11):
- Replaced Fuzzypacks with difflib

Changelog v5.1.96 (2025-04-10):
- Added Sub and Dub Presets

Changelog v5.1.95 (2025-04-09):
- Added Season Checking for Filtering

Changelog v5.1.94 (2025-04-08):
- Improved Filtering Significantly

Changelog v5.1.93 (2025-04-06):
- Improved Scraping again
- Improved Filtering again
- Fixed a Setting Label

Changelog v5.1.92 (2025-04-05):
- Fix some small filtering code

Changelog v5.1.91 (2025-04-05):
- Fix Movies for Animetosho
- Improve Animetosho Scraping

Changelog v5.1.90 (2025-04-04):
- Fixed Movies for Nyaa, Local, Cloud

Changelog v5.1.89 (2025-04-04):
- Added Animixplay

Changelog v5.1.88 (2025-04-03):
- Optimized Filtering Code

Changelog v5.1.87 (2025-04-03):
- Improved the crap out of Nyaa Scraping
- Added Function to Filter Out Sources

Changelog v5.1.86 (2025-04-02):
- Fixed Bugs with Scraping
- Improved Animetosho Scraping
- Unknown Seeders have NA

Changelog v5.1.85 (2025-03-31):
- Fixed Bugs with Playlist & Resume times
- Optimized Playback again
- Made Scraping Faster
- Sadly removed Gogo

Changelog v5.1.84 (2025-03-27):
- Small fix to HiAnime

Changelog v5.1.83 (2025-03-26):
- Added Watchlist Migration Script 
- Added Wipe Addon Data Setting
- String Changes to add descriptions soon

Changelog v5.1.82 (2025-03-22):
- Small fixes to Simkl
