@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<addon id="context.otaku.testing" version="1.0.26" name="Otaku - Global Context Menu Items" provider-name="TeamOtaku">
+<addon id="context.otaku.testing" version="1.0.27" name="Otaku - Global Context Menu Items" provider-name="TeamOtaku">
   <requires>
-     <import addon="xbmc.python" version="3.0.0" />
+     <import addon="xbmc.python" version="3.0.1"/>
   </requires>
   <extension point="kodi.context.item">
     <menu id="kodi.core.main">
