@@ -1,3 +1,9 @@
+Changelog v5.2.5 (2025-04-18):
+- Fixed embed playback using IA
+- Fixed incorrect titles in Source Select
+- Changed default timeout to 20
+- Updated Python Version Number
+
 Changelog v5.2.4 (2025-04-17):
 - Added hd-1 for testing
 
